Fix minor spacing bug on sign in

--- a/client/src/SignIn.css
+++ b/client/src/SignIn.css
@@ -27,9 +27,9 @@
     font-weight: 500;
   }
   
-  .form-input {
+  #form-input {
     width: 100%;
-    padding: 10px;
+    padding-right: 0px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
